# ai_inference_investment_tracker

./: .gitignore  README.md  netlify.toml  package-lock.json  package.json  pyproject.toml
data/: inference_thesis_watchlist.json  manual_event_annotations.csv
data/outputs/: inference_daily_summary.md  inference_tracker.html  inference_tracker.md  recommendation_book.csv  trading_spec.md  validation_report.md
scripts/: publish_site.sh
site/: daily-summary.html  daily-summary.md  index.html  inference_demand_dashboard.json  inference_thesis_watchlist.json  tracker.html  tracker.md  user-demand.html  user-demand.md
src/ai_inference_tracker/: __init__.py  annotations.py  cli.py  collectors.py  config.py  db.py  event_study.py  inference_tracker.py  prices.py  reporting.py  strategy.py
src/ai_power_validation/: __init__.py  annotations.py  cli.py  collectors.py  config.py  constants.py  db.py  event_study.py  inference_tracker.py  prices.py  reporting.py  schema.sql  strategy.py
tests/: conftest.py  test_annotations.py  test_collectors.py  test_event_study.py  test_inference_tracker.py  test_reporting.py  test_strategy.py
